--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icon",
-  "description": "通用图标",
+  "description": "通用图标样式",
   "version": "1.0.0",
   "homepage": "https://github.com/chopper-UI/icon",
   "repository": {
